test/reject/20-malfored-basic-interface.puml
@startuml

interface This is not fine {

    
}

@enduml